--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,1 +1,31 @@
 @import "tailwindcss";
+@plugin "@tailwindcss/forms";
+
+@theme {
+  --color-primary: #1ded73;
+  --color-background-light: #f8fcf9;
+  --color-background-dark: #102217;
+  --color-surface-light: #ffffff;
+  --color-surface-dark: #1a2c22;
+
+  /* FONT */
+  --font-display: var(--font-inter);
+
+  /* RADIUS (opsional bonus biar modern) */
+  --radius-lg: 12px;
+
+  /* SHADOW */
+  --shadow-soft: 0 20px 40px -15px rgba(0, 0, 0, 0.05);
+  --shadow-glow: 0 0 20px -5px rgba(29, 237, 115, 0.3);
+}
+
+/* Dark Mode */
+
+.dark {
+  --color-background-light: 16 34 23;
+  --color-surface-light: 26 44 34;
+}
+
+.custom-checkbox:checked {
+  background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z'/%3e%3c/svg%3e");
+}
